--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
+    "react-grid-gallery": "^1.0.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/react-burger-menu": "^2.8.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
